Tweak game container look so it doesn't hurt as much on mobile

--- a/gamedoodle/core/templates/core/base.html
+++ b/gamedoodle/core/templates/core/base.html
@@ -15,6 +15,7 @@
     body {
       margin: 20px;
       font-family: 'Press Start 2P';
+      background-color: rgba(0, 0, 0, 0.02);
     }
 
     [dbg], [dbg] * {
