--- a/gamedoodle/core/templates/core/base.html
+++ b/gamedoodle/core/templates/core/base.html
@@ -18,7 +18,7 @@
       background-color: rgba(0, 0, 0, 0.02);
     }
 
-    [dbg], [dbg] * {
+    [dbg], [dbg] *, .dbg, .dbg * {
       outline: 1px solid red !important;
     }
 
