--- a/gamedoodle/core/templates/core/event_detail.html
+++ b/gamedoodle/core/templates/core/event_detail.html
@@ -187,10 +187,22 @@
                 class="nes-text is-success"
                 style="margin-left: 8px"
               >{{ vote.username }}{% if vote.is_superlike %}<i
-                class="nes-icon star"
+                class="nes-icon star nes-pointer"
                 style="margin-left: 8px"
-                title="This is a super-like vote, making this count a little more than a normal vote"
-              ></i>{% endif %}</span>{% if not forloop.last %}, {% endif %}
+                {% if event.read_only %}
+                  title="Event is in read-only mode"
+                {% else %}
+                  title="This is a super-like vote, making this count a little more. Click to remove the superlike."
+                {% endif %}
+                onclick="document.getElementById('btn-superlike-vote-{{ game.id }}').click()"
+              ></i><button
+                id="btn-superlike-vote-{{ game.id }}"
+                type="submit"
+                name="superlike_vote_id"
+                value="{{ vote.id }}"
+                {% if event.read_only %}disabled{% endif %}
+                style="display: none;"
+              ></button>{% endif %}</span>{% if not forloop.last %}, {% endif %}
             </span>
           </button>
           {% endfor %}
@@ -240,7 +252,7 @@
             title="Event is in read-only mode"
             disabled
             {% endif %}
-            title="Make your vote count extra!"
+            title="Make this vote count extra with a superlike (you only have one per event)"
             style="
               max-height: 72px;
             "
