--- a/gamedoodle/core/templates/core/event_detail.html
+++ b/gamedoodle/core/templates/core/event_detail.html
@@ -114,7 +114,7 @@
           <span
             class="nes-text is-success"
           >
-            &nbsp;+{{ game.votes|length }}&nbsp;
+            &nbsp;+{{ game.votes_value|floatformat }}&nbsp;
           </span>
           {% endif %}
           {% if game.is_free %}
@@ -165,46 +165,50 @@
           "
         >
           {% for vote in game.votes %}
-            <span style="white-space: nowrap">
-              {% if vote.username == username %}
-              <span
-                class="nes-text is-error nes-pointer"
-                {% if event.read_only %}
-                  title="Event is in read-only mode"
-                {% else %}
-                  title="Remove your vote for this game"
-                {% endif %}
-                onclick="document.getElementById('btn-vote-{{ game.id }}').click()"
-              >
-                x<button
-                  id="btn-vote-{{ game.id }}"
-                  type="submit"
-                  name="vote_id"
-                  value="{{ vote.id }}"
-                  {% if event.read_only %}disabled{% endif %}
-                  style="display: none;"
-                ></button></span>{% endif %}<span
-                class="nes-text is-success"
-                style="margin-left: 8px"
-              >{{ vote.username }}{% if vote.is_superlike %}<i
-                class="nes-icon star nes-pointer"
-                style="margin-left: 8px"
-                {% if event.read_only %}
-                  title="Event is in read-only mode"
-                {% else %}
-                  title="This is a super-like vote, making this count a little more. Click to remove the superlike."
-                {% endif %}
-                onclick="document.getElementById('btn-superlike-vote-{{ game.id }}').click()"
-              ></i><button
-                id="btn-superlike-vote-{{ game.id }}"
+          <span style="white-space: nowrap">
+            {% if vote.username == username %}
+            <span
+              class="nes-text is-error nes-pointer"
+              {% if event.read_only %}
+                title="Event is in read-only mode"
+              {% else %}
+                title="Remove your vote for this game"
+              {% endif %}
+              onclick="document.getElementById('btn-vote-{{ vote.id }}').click()"
+            >
+              x<button
+                id="btn-vote-{{ vote.id }}"
                 type="submit"
-                name="superlike_vote_id"
+                name="vote_id"
                 value="{{ vote.id }}"
                 {% if event.read_only %}disabled{% endif %}
                 style="display: none;"
-              ></button>{% endif %}</span>{% if not forloop.last %}, {% endif %}
-            </span>
-          </button>
+              ></button></span>{% endif %}<span
+              class="nes-text is-success"
+              style="margin-left: 8px"
+            >{{ vote.username }}{% if vote.is_superlike %}<i
+              class="
+                nes-icon star
+                {% if vote.username == username %}nes-pointer{% endif %}
+              "
+              style="margin-left: 8px"
+              {% if event.read_only %}
+                title="Event is in read-only mode"
+              {% else %}
+                title="This is a super-like vote, making this count a little more. Click to remove the superlike."
+              {% endif %}
+              {% if vote.username == username %}
+              onclick="document.getElementById('btn-superlike-vote-{{ vote.id }}').click()"
+              {% endif %}
+            ></i><button
+              id="btn-superlike-vote-{{ vote.id }}"
+              type="submit"
+              name="superlike_vote_id"
+              value="{{ vote.id }}"
+              {% if event.read_only %}disabled{% endif %}
+              style="display: none;"
+            ></button>{% endif %}</span>{% if not forloop.last %}, {% endif %}
+          </span>
           {% endfor %}
         </div>
 
