Fix admin button using wrong margin

--- a/gamedoodle/core/templates/core/base.html
+++ b/gamedoodle/core/templates/core/base.html
@@ -47,7 +47,7 @@
             <div style="margin-left: auto;">
               <span
                 class="nes-text"
-                style="margin-right: 8px"
+                style="margin-left: 32px; margin-right: 8px"
               >
                 {{ username }}
               </span>
