Fix navbar broken on mobile

--- a/gamedoodle/core/templates/core/base.html
+++ b/gamedoodle/core/templates/core/base.html
@@ -53,12 +53,15 @@
           <div
             style="
               display: flex;
+              flex-wrap: wrap;
+              justify-content: center;
+              align-items: center;
               margin-bottom: 20px;
             "
           >
             {% block navbar_left %}{% endblock %}
             {% block navbar_right %}
-            <div style="margin-left: auto;">
+            <div>
               <span
                 class="nes-text"
                 style="margin-left: 32px; margin-right: 8px"
