--- a/gamedoodle/core/templates/core/event_detail.html
+++ b/gamedoodle/core/templates/core/event_detail.html
@@ -41,7 +41,12 @@
   >
     <p>
       <h1 class="nes-text is-primary">
-        {{ event.name }}
+        {{ event.name }} <a
+          href="{% url "event-notifications-setup" uuid=event.uuid %}"
+          title="Send me email notifications about activity for this event (max. one email per day and only if something has happened)"
+        >
+          <i class="nes-icon gmail is-medium" style="filter: grayscale(1)"></i>
+        </a>
       </h1>
       {% if event.date %}
       <h2 class="nes-text">
