Imlement management command to send daily notification emails

--- a/gamedoodle/core/templates/core/event_setup_email_notifications.html
+++ b/gamedoodle/core/templates/core/event_setup_email_notifications.html
@@ -50,7 +50,7 @@
         disabled
         {% endif %}
         style="margin-left: auto"
-        onclick="document.getElementById('subscribe-btn').disabled = true"
+        onclick="document.getElementById('subscribe-btn').innerHTML = 'Subscribing ...'"
       >
         Subscribe
       </button>
