--- a/gamedoodle/core/templates/core/event_detail.html
+++ b/gamedoodle/core/templates/core/event_detail.html
@@ -41,7 +41,7 @@
   >
     <p>
       <h1 class="nes-text is-primary">
-        {{ event.name }} <a
+        {{ event.name }} {% if not event.read_only  %}<a
           href="{% url "event-notifications-setup" uuid=event.uuid %}"
           title="Send me email notifications about activity for this event (max. one email per day and only if something has happened)"
         >
@@ -49,7 +49,7 @@
             class="nes-icon gmail is-medium"
             style="filter: grayscale(1);"
           ></i>
-        </a>
+        </a>{% endif %}
       </h1>
       {% if event.date %}
       <h2 class="nes-text">
