--- a/gamedoodle/core/templates/core/event_setup_email_notifications.html
+++ b/gamedoodle/core/templates/core/event_setup_email_notifications.html
@@ -13,7 +13,7 @@
   </h2>
   {% if subscribed %}
   <div class="nes-text is-success" style="margin-top: 16px">
-    <p>You will receive event activity notifications to: <strong>{{ email }}</strong>.</p>
+    <p>You will receive event activity notifications to: <strong style="word-break: break-word">{{ email }}</strong>.</p>
     <p>Please check your emails and confirm the subscription.</p>
   </div>
   {% else %}
