--- a/gamedoodle/core/templates/core/event_detail.html
+++ b/gamedoodle/core/templates/core/event_detail.html
@@ -282,4 +282,15 @@
   </form>
 
 </div>
+
+{% if subscribed %}
+<script>
+  alert('Your email subscription has been confirmed!');
+</script>
+{% elif unsubscribed %}
+<script>
+  alert('Your email subscription has been removed!');
+</script>
+{% endif %}
+
 {% endblock%}
