--- a/gamedoodle/core/templates/core/event_setup_email_notifications.html
+++ b/gamedoodle/core/templates/core/event_setup_email_notifications.html
@@ -12,9 +12,9 @@
    Receive email notifications for <a href="{% url "event-detail" uuid=event.uuid %}">{{ event.name }}</a>
   </h2>
   {% if subscribed %}
-  <div class="nes-text is-success" style="margin-top: 16px">
-    <p>You will receive event activity notifications to: <strong style="word-break: break-word">{{ email }}</strong>.</p>
-    <p>Please check your emails and confirm the subscription.</p>
+  <div style="margin-top: 16px">
+    <p class="nes-text is-success" >You will receive event activity notifications to: <strong style="word-break: break-word">{{ email }}</strong>.</p>
+    <p class="nes-text" >Please check your emails (don't forget the <b>SPAM</b> folder) and confirm the subscription.</p>
   </div>
   {% else %}
   <form
