Add mechanic to follow game's scroll position and fade them in
It's still a bit jumpy, but the fade-in should smooth out that a bit.

--- a/gamedoodle/core/templates/core/base.html
+++ b/gamedoodle/core/templates/core/base.html
@@ -31,6 +31,23 @@
     .nes-table.hoverable tr:hover {
       background-color: rgba(0, 0, 0, 0.08);
     }
+
+    .fade-in {
+      opacity: 1;
+      animation-name: fadeInOpacity;
+      animation-iteration-count: 1;
+      animation-timing-function: ease-in;
+      animation-duration: 0.3s;
+    }
+
+    @keyframes fadeInOpacity {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
   </style>
   <body>
     <div
