Fix not wrapping on mobile

--- a/gamedoodle/core/templates/core/event_detail_content.html
+++ b/gamedoodle/core/templates/core/event_detail_content.html
@@ -145,6 +145,7 @@
             margin-top: 16px;
             margin-bottom: 16px;
             display: flex;
+            flex-wrap: wrap;
             align-items: baseline;
           "
         >
