--- a/gamedoodle/core/templates/core/event_detail_content.html
+++ b/gamedoodle/core/templates/core/event_detail_content.html
@@ -252,6 +252,20 @@
         </div>
         {% endif %}
 
+        <a
+          class="nes-pointer"
+          href="{% url "event-add-comment" uuid=event.uuid %}?game={{game.id }}"
+        >
+          {% if game.comments.exists %}
+          <span class="nes-text is-primary">
+            {{ game.comments|length }}
+            {% if game.comments|length == 1 %}Comment{% else %}Comments{% endif %}
+          </span>
+          {% else %}
+          <span class="nes-text is-disabled">Add first Comment</span>
+          {% endif %}
+        </a>
+
       </div>
     </div>
     {% empty %}
