--- a/gamedoodle/core/templates/core/event_add_comment.html
+++ b/gamedoodle/core/templates/core/event_add_comment.html
@@ -5,7 +5,7 @@
   style="
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
   "
 >
   <h2>
@@ -13,11 +13,14 @@
     {{game.name }}</span> within <a href="{% url "event-detail" uuid=event.uuid %}">
       {{ event.name }}</a>:
   </h2>
-  <div style="
-    display: flex;
-    justify-content: center;
-    margin-top: 32px;
-  ">
+
+  <div
+    style="
+      display: flex;
+      justify-content: center;
+      margin-top: 32px;
+    "
+  >
     <section class="message-list">
       {% for comment in game.comments %}
       <section
@@ -35,7 +38,8 @@
           <div class="nes-balloon from-{% cycle 'left' 'right' %}">
             <p>{{ comment.text }}</p>
           </div>
-          <div class="nes-text is-primary">
+          <div
+            class="nes-text is-primary">
             <span style="
               width: 100%;
               display: inline-block;
@@ -50,5 +54,39 @@
       {% endfor %}
     </section>
   </div>
+
+  <div
+    style="
+      margin-top: 48px;
+      max-width: 640px;
+    "
+  >
+    <form method="POST">
+      {% csrf_token %}
+      <textarea
+        id="new-comment"
+        class="nes-textarea"
+        name="new-comment"
+        rows="2"
+        required
+      ></textarea>
+      <div
+        style="
+          width: 100%;
+          display: flex;
+          justify-content: flex-end;
+        "
+      >
+        <button
+          type="submit"
+          class="nes-btn is-primary"
+          style="margin-top: 16px"
+        >
+          Add Comment
+        </button>
+      </div>
+    </form>
+  </div>
+
 </div>
 {% endblock%}
