Add softdeletion to comments, make add/delete w/o page reload via htmx

--- a/gamedoodle/core/templates/core/base.html
+++ b/gamedoodle/core/templates/core/base.html
@@ -49,7 +49,7 @@
       }
     }
   </style>
-  <body>
+  <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
     <div
       style="
         display: flex;
