--- a/gamedoodle/core/templates/core/event_add_comment.html
+++ b/gamedoodle/core/templates/core/event_add_comment.html
@@ -1,92 +1,7 @@
 {% extends "core/base.html" %}
 
 {% block content %}
-<div
-  style="
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  "
->
-  <h2>
-    Comment about voting for <span class="nes-text is-success">
-    {{game.name }}</span> within <a href="{% url "event-detail" uuid=event.uuid %}">
-      {{ event.name }}</a>:
-  </h2>
 
-  <div
-    style="
-      display: flex;
-      justify-content: center;
-      margin-top: 32px;
-    "
-  >
-    <section class="message-list">
-      {% for comment in game.comments %}
-      <section
-        class="message {% cycle '-left' '-right' %}"
-        style="margin-top: 16px;"
-      >
-        <div
-          style="
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: {% if not forloop.counter|divisibleby:2 %}flex-start{% else %}flex-end{% endif %};
-          "
-        >
-          <div class="nes-balloon from-{% cycle 'left' 'right' %}">
-            <p>{{ comment.text_as_html|safe }}</p>
-          </div>
-          <div
-            class="nes-text is-primary">
-            <span style="
-              width: 100%;
-              display: inline-block;
-              text-align: {% if not forloop.counter|divisibleby:2 %}left{% else %}right{% endif %};
-            ">{{ comment.username }}</span><br>
-            <small class="nes-text is-disabled">
-              {{comment.created_at|date:"d.m.Y, H:i" }}
-            </small>
-          </div>
-        </div>
-      </section>
-      {% endfor %}
-    </section>
-  </div>
+  {% include "core/event_add_comment_content.html" %}
 
-  <div
-    style="
-      margin-top: 48px;
-      max-width: 640px;
-    "
-  >
-    <form method="POST">
-      {% csrf_token %}
-      <textarea
-        id="new-comment"
-        class="nes-textarea"
-        name="new-comment"
-        rows="2"
-        required
-      ></textarea>
-      <div
-        style="
-          width: 100%;
-          display: flex;
-          justify-content: flex-end;
-        "
-      >
-        <button
-          type="submit"
-          class="nes-btn is-primary"
-          style="margin-top: 16px"
-        >
-          Add Comment
-        </button>
-      </div>
-    </form>
-  </div>
-
-</div>
 {% endblock%}
