--- a/gamedoodle/core/templates/core/event_list.html
+++ b/gamedoodle/core/templates/core/event_list.html
@@ -7,7 +7,7 @@
   {% for event in events %}
   <li style="margin-bottom: 8px;">
     {% if event.date %}
-      <span class="nes-text is-success">
+      <span class="nes-text">
         {{ event.date|date:"d.m.Y" }}
       </span>
       {% else %}
