Limit comments max-width

--- a/gamedoodle/core/templates/core/event_add_comment_content.html
+++ b/gamedoodle/core/templates/core/event_add_comment_content.html
@@ -33,7 +33,10 @@
             align-items: {% if not forloop.counter|divisibleby:2 %}flex-start{% else %}flex-end{% endif %};
           "
         >
-          <div class="nes-balloon from-{% cycle 'left' 'right' %}">
+          <div
+            class="nes-balloon from-{% cycle 'left' 'right' %}"
+            style="max-width: 800px"
+          >
             <p>{{ comment.text_as_html|safe }}</p>
           </div>
           <div
