--- a/gamedoodle/core/templates/core/base.html
+++ b/gamedoodle/core/templates/core/base.html
@@ -70,6 +70,22 @@
           >
             {% block navbar_left %}{% endblock %}
             {% block navbar_right %}
+            <div style="display: flex; flex-wrap: wrap;">
+              <a
+                href="{% url "event-list" %}"
+                class="nes-text is-disabled"
+                style="margin-left: 32px;"
+              >
+                Events
+              </a>
+              <a
+                href="{% url "admin:index" %}"
+                class="nes-text is-disabled nes-pointer"
+                style="margin-left: 32px;"
+              >
+                Admin
+              </a>
+            </div>
             <div>
               <span
                 class="nes-text"
