--- a/gamedoodle/core/templates/core/event_detail_content.html
+++ b/gamedoodle/core/templates/core/event_detail_content.html
@@ -78,7 +78,6 @@
           class="title"
           style="
             margin-top: 8px;
-            margin-bottom: 8px;
             margin-right: auto;
             position: relative;
             top: -8px;
@@ -108,6 +107,20 @@
           </a>
           {% endif %}
         </div>
+
+        {% if game.added_by_username %}
+          <small
+            class="nes-text is-disabled"
+            style="
+              display: block;
+              margin-top: -6px;
+              width: 100%;
+              text-align: right;
+            "
+          >added by {{ game.added_by_username }}</small>
+        {% endif %}
+
+        <div style="margin-bottom: 8px"></div>
 
         {% if game.image_url %}
         <div style="flex-grow: 1">
