Add simple note of number and names of members of Event

--- a/gamedoodle/core/templates/core/event_detail_content.html
+++ b/gamedoodle/core/templates/core/event_detail_content.html
@@ -43,6 +43,15 @@
       Event is in read-only mode and can not be modified!
     </div>
     {% endif %}
+    {% if event.usernames %}
+    <a
+      href="#"
+      class="nes-text is-primary"
+      onclick="alert({% for name in event.usernames %}'{{ name }}'{% if not forloop.last %} + ', ' + {% else %}{% endif %}{% endfor %})"
+    >
+      {{ event.usernames|length }} members
+    </a>
+    {% endif %}
   </div>
   <form
     hx-post="{% url "event-vote-game" uuid=event.uuid %}"
