Hide add-comment button completely for read-only Event

--- a/gamedoodle/core/templates/core/event_add_comment_content.html
+++ b/gamedoodle/core/templates/core/event_add_comment_content.html
@@ -69,6 +69,7 @@
     </section>
   </div>
 
+  {% if not event.read_only %}
   <div
     style="
       margin-top: 48px;
@@ -106,4 +107,5 @@
       </div>
     </form>
   </div>
+  {% endif %}
 </div>
