--- a/gamedoodle/core/templates/core/event_add_comment_content.html
+++ b/gamedoodle/core/templates/core/event_add_comment_content.html
@@ -49,7 +49,7 @@
             "
             style="max-width: 800px"
           >
-            <p>{{ comment.text_as_html|safe }}</p>
+            <p style="white-space: pre-line">{{ comment.text_as_html|safe }}</p>
           </div>
           <div
             class="nes-text is-primary">
